# vibdata-baselines

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  GradReversal.py  README.md  barlow_twins.py  baseline_biased.py  baseline_validation.py  baselines.py  dataset_exp.py  domain_adap.py  main.py  no_auth_requirements.txt  pyproject.toml  requirements.txt  run.sh  test.py  wandb.env  wandb.sh
benchmarks/DLDB/: datasets.py  experiment.py
benchmarks/DLDB/models/: __init__.py
benchmarks/RPDBCS/: coral.py  datasets.py  experiment_dap.py  experiment_finetunning.py  experiment_finetunning2.py  experiment_vibnet.py  utils.py
benchmarks/RPDBCS/models/: GradRev_models.py  RPDBCS2020Net.py
cfgs/: 1nn-example.yaml  base.yaml  cwru-example.yaml  dnn-example.yaml  knn-example.yaml  m5.yaml  models.yaml  randomforest-example.yaml  randomforest.yaml  resnet18-all.yaml  resnet18-pwv.yaml  resnet18-scalo.yaml  resnet18-spec.yaml  resnet18-tsai.yaml  resnet18.yaml  resnet1d18.yaml  vggish.yaml  vggish_RF.yaml  xresnet18-base.yaml  xresnet18.yaml
cfgs/multi_rounds/: test-dnn-cwru-12.yaml  test-dnn-cwru-48.yaml  test-dnn-mfpt-48828.yaml  test-dnn-pu.yaml
docs/multi_round/: CWRU_12kHz.md  CWRU_48.md  CWRU_48kHz.md  MFPT_48828Hz.md  PU.md
lib/: config.py  experiment.py  runner.py  sampling.py
lib/cli/: baselines.py  common.py  sklearn.py
lib/data/: group_dataset.py
lib/models/: ResNet.py  VGGish.py  model.py  vgg_models.py
lib/transforms/: transforms.py
lib/utils/: MemeDataset.py  dataloaders.py  lightning.py  sklearn.py  transforms.py
models/: Alexnet1d.py  NaiveTime.py  Resnet1d.py  model.py
notebooks/: Analyze.ipynb  Cmp_results.ipynb  DatasetAnalysis.ipynb  Torch-audio.ipynb  analyze_featurespace.ipynb  analyze_featurespace2.ipynb  analyze_results.ipynb  analyze_wandb.ipynb  eda.ipynb  features.npy  show_results.ipynb
tests/: test_dataloader.py  test_dataset.py  test_experiments.py  test_schema.py  test_sklearn.py
tools/: README.md  exprunner.py
tools/exprunner/: README.md  exprunner.py
utils/: MemeDataset.py  dataloaders.py  datasets_runner.py  report.py  transforms.py
vibnet/: config.py  experiment.py  runner.py  sampling.py
vibnet/cli/: __init__.py  baselines.py  common.py  sklearn.py
vibnet/data/: group_dataset.py  multi_rounds.py  resampling.py  round_cv.py
vibnet/data/rounds/: CWRU_12000_rounds_combinations.pkl  CWRU_48000_rounds_combinations.pkl  MFPT_48828_rounds_combinations.pkl  __init__.py  create.py
vibnet/data/rounds_repo/: __init__.py
vibnet/models/: Alexnet1d.py  M5.py  NaiveTime.py  model.py
vibnet/schema/: __init__.py  classic.schema.json  deep.schema.json  validator.py
vibnet/utils/: MemeDataset.py  dataloaders.py  datasets_runner.py  lightning.py  sklearn.py  sklearn_dataset.py
