[tool.poetry]
name = "vibnet"
version = "0.1.0"
description = "Vibnet"
authors = []

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.25.0"
pandas = "^1.5.3"
PyYAML = "^6.0"
scikit-learn = "^1.3.0"
torch = "^1.13.1"
wandb = ">=0.15.2"
xgboost = "^1.7.0"
python-dotenv = "^1.0.0"
scipy = "^1.11.0"
tqdm = "^4.65.0"
tsai = ">=0.3.7"
typer = {version = ">=0.9.0", extras = ["all"]}
lightning = "^2.1.0"
torchmetrics = "^1.2.0"
essentia = "2.1b6.dev1110"
vibdata = {git = "git@gitlab.com:ninfa-ufes/deep-rpdbcs/signal-datasets.git", rev = "d1f195fbd7c884878f2c51dd5f4dee309b13057e"}

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
ipython = "^8.0.0"
isort = "^5.0.0"
black = "^23.0.0"
python-lsp-server = ">=1.8.0"
python-lsp-ruff = "^1.5.0"
python-lsp-black = ">=1.3.0"
pyls-isort = ">=0.2.2"

[tool.poetry.scripts]
vibnet = "vibnet.cli:run_baselines"

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I001"]

[tool.isort]
length_sort = true
profile = "black"
multi_line_output = 5
line_length = 120
use_parentheses = true

[tool.black]
line-length = 120
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
